--- a/Ajedrez.vcxproj.filters
+++ b/Ajedrez.vcxproj.filters
@@ -180,6 +180,9 @@
     <ClInclude Include="src\Mundo.h">
       <Filter>2_Graficos\Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Plane.h">
+      <Filter>2_Graficos\Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Caballo.cpp">
@@ -270,6 +273,9 @@
       <Filter>2_Graficos\Resource FIles</Filter>
     </ClCompile>
     <ClCompile Include="src\Mundo.cpp">
+      <Filter>2_Graficos\Resource FIles</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Plane.cpp">
       <Filter>2_Graficos\Resource FIles</Filter>
     </ClCompile>
   </ItemGroup>
